// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Notie /> Error message 1`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ff4949",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Error!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> Error message 2`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#ff4949",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Error!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> info message 1`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#20a0ff",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Info!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> info message 2`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#20a0ff",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Info!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> initial render 1`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#20a0ff",
      }
    }
  >
    <div
      className="emotion-0"
    />
  </dialog>
</Notie>
`;

exports[`<Notie /> success message 1`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#13ce66",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Success!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> success message 2`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#13ce66",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Success!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> warn message 1`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f5be4b",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Warn!
    </div>
  </dialog>
</Notie>
`;

exports[`<Notie /> warn message 2`] = `
.emotion-1 {
  position: fixed;
  width: 100%;
  text-align: center;
  font-size: 14px;
  color: #fff;
  margin: 0 auto;
  white-space: nowrap;
  border: none;
  text-overflow: ellipsis;
  left: 0;
  top: 0;
  padding: 0;
  pointer-events: none;
}

.emotion-1[open] {
  pointer-events: auto;
}

.emotion-0 {
  padding: 20px;
}

<Notie>
  <dialog
    className="emotion-1"
    onClick={[Function]}
    style={
      Object {
        "backgroundColor": "#f5be4b",
      }
    }
  >
    <div
      className="emotion-0"
    >
      Warn!
    </div>
  </dialog>
</Notie>
`;
